# http-sfv

./: CMakeLists.txt  LICENSE  README.md  env
include/: hsfv.h
include/hsfv/: base64.h  ctype.h
lib/: allocator.c  bare_item.c  base64.c  buffer.c  ctype.c  dictionary.c  field_value.c  inner_list.c  iovec.c  item.c  list.c  murmurhash2.c  parameters.c  parsable.c  parse_ignore.c  skip.c  string.c  targeted_cache_control.c
tests/: allocator.cpp  bare_item.cpp  base64.cpp  buffer.cpp  ctype.cpp  dictionary.cpp  field_value.cpp  httpwg.cpp  inner_list.cpp  iovec.cpp  item.cpp  list.cpp  parameters.cpp  parsable.cpp  parse_ignore.cpp  skip.cpp  string.cpp  targeted_cache_control.cpp  vector.cpp
